; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_util.c_mkPath.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_util.c_mkPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EEXIST = common dso_local global i64 0, align 8
@PATH_CHAR = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mkPath(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @MKDIR(i8* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %10
  %16 = load i32, i32* %7, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i64, i64* @errno, align 8
  %20 = load i64, i64* @EEXIST, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18, %10
  store i32 0, i32* %3, align 4
  br label %46

23:                                               ; preds = %18, %15
  br label %24

24:                                               ; preds = %23, %2
  %25 = load i8*, i8** %4, align 8
  %26 = load i8, i8* @PATH_CHAR, align 1
  %27 = call i8* @strrchr(i8* %25, i8 signext %26)
  store i8* %27, i8** %6, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %35

29:                                               ; preds = %24
  %30 = load i8*, i8** %6, align 8
  store i8 0, i8* %30, align 1
  %31 = load i8*, i8** %4, align 8
  %32 = call i32 @mkPath(i8* %31, i32 1)
  store i32 %32, i32* %7, align 4
  %33 = load i8, i8* @PATH_CHAR, align 1
  %34 = load i8*, i8** %6, align 8
  store i8 %33, i8* %34, align 1
  br label %35

35:                                               ; preds = %29, %24
  %36 = load i32, i32* %7, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %44, label %38

38:                                               ; preds = %35
  %39 = load i32, i32* %5, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %38
  %42 = load i8*, i8** %4, align 8
  %43 = call i32 @MKDIR(i8* %42)
  store i32 %43, i32* %7, align 4
  br label %44

44:                                               ; preds = %41, %38, %35
  %45 = load i32, i32* %7, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %44, %22
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @MKDIR(i8*) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
